--- a/src/app/modules/dashboard/components/nft/nft-auctions-table-item/nft-auctions-table-item.component.html
+++ b/src/app/modules/dashboard/components/nft/nft-auctions-table-item/nft-auctions-table-item.component.html
@@ -34,7 +34,7 @@
 <td class="py-2 pl-2 text-left row">
   <div class="flex justify-start">
     <button
-    (click)="viewInfo(auction._id)"
+    (click)="viewInfo(auction)"
     class="flex h-7 w-7 items-center justify-center m-2 rounded-md bg-primary-500 text-gray-200 dark:bg-night-500 dark:text-night-300">
     <svg-icon src="assets/icons/outline/view.svg" [svgClass]="'h-5 w-5'"> </svg-icon>
   </button>
@@ -98,3 +98,4 @@
     </div>
   </div>
 </div>
+
