--- a/src/app/modules/dashboard/components/campaign-info/campaign-info.component.html
+++ b/src/app/modules/dashboard/components/campaign-info/campaign-info.component.html
@@ -4,11 +4,18 @@
       <h3 class="text-md font-bold text-gray-900 dark:text-night-50">Campaign Info</h3>
       <span class="text-sm text-gray-400 dark:text-night-300">More details about this campaign</span>
     </div>
+    <button routerLink="/app/dashboard/primary-campaigns"
+    class="flex-none rounded-md bg-gray-400 px-4 py-2.5 text-xs font-semibold text-gray-100 hover:bg-primary-400 dark:bg-night-600 dark:text-night-200 dark:hover:bg-night-500">
+    Back
+  </button>
   </div>
 
   <div class="flex flex-row">
     <div class="relative w-[50%] overflow-x-auto m-4 shadow-md">
-      <div class="w-full rounded overflow-hidden">
+      <div class="flex justify-center" *ngIf="loading">
+        <div class="loader simple-circle"></div>
+      </div>
+      <div class="w-full rounded overflow-hidden" *ngIf="!loading">
         <div class="px-6 py-2 flex flex-row">
           <div class="px-2">Campaign Type:</div>
           <div class="font-semibold">{{this.selectedCategory}}</div>
@@ -19,7 +26,7 @@
           <div class="font-semibold">{{this.selectedIndustry}}</div>
         </div>
         <div class="px-6 py-2 flex flex-row">
-          <div class="px-2">Hash Tags:</div>
+          <div class="px-2">Hash Tag:</div>
           <div class="font-semibold">{{this.selectedTag}}</div>
         </div>
         <div class="px-6 pt-4 pb-2">
@@ -30,22 +37,29 @@
     </div>
 
     <div class="relative overflow-x-auto m-4 shadow-md w-[50%]">
-      <div class="w-full rounded overflow-hidden">
+      <div class="flex justify-center" *ngIf="loading">
+        <div class="loader simple-circle"></div>
+      </div>
+      <div class="w-full rounded overflow-hidden" *ngIf="!loading">
         <div class="px-6 py-4">
           <div class="font-semibold text-md">Budget Info</div>
           <div class="py-2 flex flex-col justify-center">
             <div class="px-2 self-center">Campaign Balance</div>
-            <div class="px-2 self-center font-semibold py-2">KES: 13039</div>
+            <div class="px-2 self-center font-semibold py-2">KES: {{this.selectedBalance}}</div>
             <p class="self-center p-2">of</p>
-            <div class="px-2 self-center">KES: 586483</div>
+            <div class="px-2 self-center">KES: {{this.selectedTotalBudget}}</div>
             <!-- <div class="font-semibold">Video</div> -->
-            <button type="button" class=" max-w-[40%] self-center text-white bg-blue-700 hover:bg-blue-800 focus:outline-none focus:ring-blue-300 font-medium rounded text-sm px-5 py-2.5 text-center mr-2 dark:bg-blue-600 dark:hover:bg-blue-700 dark:focus:ring-blue-800 items-center">
+            <button
+            type="button"
+            class=" max-w-[40%] self-center text-white bg-blue-700 hover:bg-blue-800 focus:outline-none focus:ring-blue-300 font-medium rounded text-sm px-5 py-2.5 text-center mr-2 dark:bg-blue-600 dark:hover:bg-blue-700 dark:focus:ring-blue-800 items-center"
+            (click)="topUp()"
+            >
               Top Up
             </button>
           </div>
           <div class="px-6 pt-4 pb-2 flex flex-row justify-between">
-            <span class="inline-block bg-gray-200 rounded-full px-3 py-1 text-sm font-semibold text-gray-700 mr-2 mb-2"><span class="text-orange-600">234</span> payout</span>
-            <span class="inline-block bg-gray-200 rounded-full px-3 py-1 text-sm font-semibold text-gray-700 mr-2 mb-2">KES: <span class="text-orange-600">1000</span> daily budget</span>
+            <span class="inline-block bg-gray-200 rounded-full px-3 py-1 text-sm font-semibold text-gray-700 mr-2 mb-2">KES: <span class="text-orange-600">{{this.selectedPayout}}</span> payout</span>
+            <span class="inline-block bg-gray-200 rounded-full px-3 py-1 text-sm font-semibold text-gray-700 mr-2 mb-2">KES: <span class="text-orange-600">{{selectedDailyBudget}}</span> daily budget</span>
           </div>
         </div>
       </div>
@@ -137,8 +151,81 @@
 
   <!--Location-->
   <div  class="relative overflow-x-auto m-4">
+    <div class="font-semibold text-md m-4">Geolocation Performance</div>
+    <div class="flex justify-center" *ngIf="loading">
+      <div class="loader simple-circle"></div>
+    </div>
     <!-- google-map-demo.component.html -->
-    <agm-map style="height: 350px;" class="app-main"  [latitude]="lat" [longitude]="long" (mapReady)="onMapLoad($event)" [zoom]=7>
-    </agm-map>
+    <div *ngIf="!loading">
+      <agm-map *ngIf="totalFemale !== 0 || totalMale !== 0" style="height: 350px;" class="app-main"  [latitude]="lat" [longitude]="long" (mapReady)="onMapLoad($event)" [zoom]=7>
+      </agm-map>
+      <div class="flex justify-center" *ngIf="totalFemale === 0 && totalMale === 0">
+        <div class="flex-col">
+          <svg-icon src="assets/icons/solid/empty.svg" [svgClass]="'h-16 w-16'"></svg-icon>
+          <p class="text-sm text-gray-400 dark:text-night-200">No data</p>
+        </div>
+      </div>
+    </div>
+
   </div>
+
+
+<div *ngIf="showtopUpModal" class="relative z-10" aria-labelledby="modal-title" role="dialog" aria-modal="true">
+  <div class="fixed inset-0 bg-gray-300 bg-opacity-60 transition-opacity"></div>
+  <div class="fixed inset-0 z-10 overflow-y-auto">
+    <div class="flex min-h-full items-end justify-center p-4 text-center sm:items-center sm:p-0">
+      <form [formGroup]="topUpForm">
+        <div class="relative transform overflow-hidden rounded-lg bg-white text-left shadow-xl transition-all sm:my-8 sm:w-full sm:max-w-lg">
+          <div class="bg-white px-4 pb-4 pt-5 sm:p-6 sm:pb-4">
+            <div class="sm:flex sm:items-start">
+              <div class="mx-auto flex h-12 w-12 flex-shrink-0 items-center justify-center rounded-full bg-red-100 sm:mx-0 sm:h-10 sm:w-10">
+                <svg class="h-6 w-6 text-green-500" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" aria-hidden="true">
+                  <circle cx="12" cy="12" r="10" stroke-linecap="round" stroke-linejoin="round"/>
+                  <path d="M9 12l2 2 4-4" />
+                </svg>
+              </div>
+              <div class="mt-3 text-center sm:ml-4 sm:mt-0 sm:text-left">
+                <h3 class="text-base font-semibold leading-6 text-gray-900" id="modal-title">Top Up Campaign</h3>
+                <div class="mt-2">
+                  <input type="text"
+                  formControlName="amount"
+                  class="border border-gray-300 px-4 py-2 rounded-md focus:outline-none focus:ring-2 focus:ring-blue-500 focus:border-blue-500" onkeypress="return event.charCode >= 48 && event.charCode <= 57"
+                  placeholder="Amount">
+                </div>
+                <div class="mt-2">
+                  <input
+                  type="text"
+                  formControlName="dailyBudget"
+                  class="border border-gray-300 px-4 py-2 rounded-md focus:outline-none focus:ring-2 focus:ring-blue-500 focus:border-blue-500" onkeypress="return event.charCode >= 48 && event.charCode <= 57"
+                  placeholder="Daily budget">
+                </div>
+                <div class="mt-2">
+                  <input type="text"
+                  formControlName="payout"
+                  class="border border-gray-300 px-4 py-2 rounded-md focus:outline-none focus:ring-2 focus:ring-blue-500 focus:border-blue-500" onkeypress="return event.charCode >= 48 && event.charCode <= 57"
+                  placeholder="Campaign payout">
+                </div>
+              </div>
+            </div>
+          </div>
+
+          <div class="bg-gray-50 px-4 py-3 sm:flex sm:flex-row-reverse sm:px-6">
+            <button *ngIf="loading" disabled type="button" class="text-white bg-blue-700 ml-4 hover:bg-blue-800 focus:ring-4 focus:outline-none focus:ring-blue-300 font-medium rounded text-sm px-5 py-2.5 text-center mr-2 dark:bg-blue-600 dark:hover:bg-blue-700 dark:focus:ring-blue-800 inline-flex items-center">
+              <svg aria-hidden="true" role="status" class="inline mr-3 w-4 h-4 text-white animate-spin" viewBox="0 0 100 101" fill="none" xmlns="http://www.w3.org/2000/svg">
+              <path d="M100 50.5908C100 78.2051 77.6142 100.591 50 100.591C22.3858 100.591 0 78.2051 0 50.5908C0 22.9766 22.3858 0.59082 50 0.59082C77.6142 0.59082 100 22.9766 100 50.5908ZM9.08144 50.5908C9.08144 73.1895 27.4013 91.5094 50 91.5094C72.5987 91.5094 90.9186 73.1895 90.9186 50.5908C90.9186 27.9921 72.5987 9.67226 50 9.67226C27.4013 9.67226 9.08144 27.9921 9.08144 50.5908Z" fill="#E5E7EB"></path>
+              <path d="M93.9676 39.0409C96.393 38.4038 97.8624 35.9116 97.0079 33.5539C95.2932 28.8227 92.871 24.3692 89.8167 20.348C85.8452 15.1192 80.8826 10.7238 75.2124 7.41289C69.5422 4.10194 63.2754 1.94025 56.7698 1.05124C51.7666 0.367541 46.6976 0.446843 41.7345 1.27873C39.2613 1.69328 37.813 4.19778 38.4501 6.62326C39.0873 9.04874 41.5694 10.4717 44.0505 10.1071C47.8511 9.54855 51.7191 9.52689 55.5402 10.0491C60.8642 10.7766 65.9928 12.5457 70.6331 15.2552C75.2735 17.9648 79.3347 21.5619 82.5849 25.841C84.9175 28.9121 86.7997 32.2913 88.1811 35.8758C89.083 38.2158 91.5421 39.6781 93.9676 39.0409Z" fill="currentColor"></path>
+              </svg>
+              Loading...
+          </button>
+          <button (click)="addFunds()" *ngIf="!loading" type="button" class="text-white bg-blue-700 hover:bg-blue-800 ml-4 cursor-pointer focus:outline-none font-medium rounded text-sm px-5 py-2.5 text-center mr-2 dark:bg-blue-600 dark:hover:bg-blue-700 dark:focus:ring-blue-800 inline-flex items-center">
+            Submit
+          </button>
+          <button [disabled]="loading" (click)="hideDelModal()" type="button" class="mt-3 inline-flex w-full justify-center rounded-md bg-white px-3 py-2 text-sm font-semibold text-gray-900 shadow-sm ring-1 ring-inset ring-gray-300 hover:bg-gray-50 sm:mt-0 sm:w-auto">Cancel</button>
+          </div>
+        </div>
+      </form>
+    </div>
+  </div>
+</div>
+
 </div>
