--- a/src/app/modules/dashboard/pages/team/team.component.html
+++ b/src/app/modules/dashboard/pages/team/team.component.html
@@ -3,7 +3,7 @@
     <div class="flex-col items-center">
       <h3 class="text-md font-bold text-gray-900 dark:text-night-50">Team Members</h3>
     </div>
-    <button routerLink="/dashboard/new-campaign"
+    <button routerLink="/app/dashboard/new-user"
       class="flex-none rounded-md bg-primary-600 px-4 py-2.5 text-xs font-semibold text-gray-100 hover:bg-primary-400 dark:bg-night-600 dark:text-night-200 dark:hover:bg-night-500">
       Add New Member
     </button>
