--- a/src/app/modules/dashboard/pages/roles/roles.component.html
+++ b/src/app/modules/dashboard/pages/roles/roles.component.html
@@ -5,7 +5,9 @@
       <!-- <span class="text-sm text-gray-400 dark:text-night-300">Updated 37 minutes ago</span> -->
     </div>
     <button
-      class="flex-none rounded-md bg-gray-100 px-4 py-2.5 text-xs font-semibold text-gray-500 hover:bg-gray-200 dark:bg-night-600 dark:text-night-200 dark:hover:bg-night-500">
+      class="flex-none rounded-md bg-primary-500 px-4 py-2.5 text-xs font-semibold text-white hover:bg-primary-200 dark:bg-night-600 dark:text-night-200 dark:hover:bg-night-500"
+      (click)="gotoNewRole()"
+      >
      New Role
     </button>
   </div>
